manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: zerotrust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: zerotrust
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
