manifests/keycloak-official.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: zerotrust
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.3.3
        args: ["start-dev", "--http-port=8080", "--hostname-strict=false"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: zerotrust
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
