manifests/ingress-frontend-oauth2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: zerotrust
  annotations:
    kubernetes.io/ingress.class: "traefik"

    # IMPORTANT : désactiver toute redirection HTTPS forcée
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
