manifests/ingress-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
  namespace: zerotrust
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: keycloak.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
